[workspace]
members = ["empath", "empath-common", "empath-delivery", "empath-ffi", "empath-smtp", "empath-spool", "empath-tracing"]
resolver = "3"

[profile.release]
lto = "thin"
opt-level = 2
codegen-units = 1

[profile.bench]
inherits = "release"
# Enable debug info for profiling benchmarks with tools like perf or flamegraph
debug = true
