[workspace]
members = ["empath", "empath-common", "empath-control", "empath-delivery", "empath-ffi", "empath-health", "empath-metrics", "empath-smtp", "empath-spool", "empath-tracing"]
resolver = "3"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
must_use_candidate = "allow"

[workspace.lints.rust]
dead_code = "deny"

[profile.release]
lto = "thin"
opt-level = 2
codegen-units = 1

[profile.bench]
inherits = "release"
# Enable debug info for profiling benchmarks with tools like perf or flamegraph
debug = true
