[workspace]
members = ["empath", "empath-common", "empath-control", "empath-delivery", "empath-ffi", "empath-health", "empath-metrics", "empath-smtp", "empath-spool", "empath-tracing"]
resolver = "3"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
must_use_candidate = "allow"
# Warn on unwrap/expect in production code (test unwraps are acceptable)
unwrap_used = "warn"
expect_used = "warn"
# Deny panic-related macros in production code (tests are allowed via #[allow] attribute)
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"

[workspace.lints.rust]
dead_code = "deny"

[profile.release]
lto = "thin"
opt-level = 2
codegen-units = 1

[profile.bench]
inherits = "release"
# Enable debug info for profiling benchmarks with tools like perf or flamegraph
debug = true
