[package]
name = "empath-common"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

build = "../build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
chrono = "0.4"
libc.workspace = true
libloading = "0.8"
mailparse.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "std",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "fmt",
    "parking_lot",
    "tracing-log",
    "time",
] }
typetag.workspace = true

[build-dependencies]
cbindgen.workspace = true
