[package]
name = "empath-common"
version = "0.0.1"
edition = "2021"
authors = ["Pyxxil"]
description = "An MTA written in Rust"
documentation = "https://docs.rs/empath"
repository = "https://github.com/Pyxxilated-Studios/empath"
homepage = "https://github.com/Pyxxilated-Studios/empath"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "email", "network-programming"]
keywords = ["email"]

[lib]
name = "empath_common"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.93"
charset = "0.1.5"
encoding_rs = "0.8.35"
empath-tracing = { path = "../empath-tracing", version = "*" }
futures-util = "0.3"
libc = "0.2"
mailparse = "0.16"
serde = { version = "1", features = ["derive", "rc"] }
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "std",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "chrono",
    "fmt",
    "parking_lot",
    "tracing-log",
] }
tokio = { version = "1", default-features = false, features = [
    "net",
] }

[build-dependencies]
anyhow = "1.0.93"
cbindgen = { version = "0.29.0", default-features = false }
