[package]
name = "empath-common"
version = "0.0.1"
edition = "2024"
authors = ["Pyxxil"]
description = "An MTA written in Rust"
documentation = "https://docs.rs/empath"
repository = "https://github.com/Pyxxilated-Studios/empath"
homepage = "https://github.com/Pyxxilated-Studios/empath"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "email", "network-programming"]
keywords = ["email"]

[lints]
workspace = true

[lib]
name = "empath_common"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1.0.93"
charset = "0.1.5"
encoding_rs = "0.8.35"
empath-tracing = { path = "../empath-tracing", version = "*" }
futures-util = "0.3"
libc = "0.2"
mailparse = "0.16"
serde = { version = "1", features = ["derive", "rc"] }
thiserror = "2.0"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "std",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "chrono",
    "fmt",
    "json",
    "parking_lot",
    "registry",
    "tracing-log",
] }
# OpenTelemetry trace context (trace_id, span_id) for distributed tracing
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "http-proto"] }
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "net",
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
] }

[dev-dependencies]
pretty_assertions = "1"

[build-dependencies]
anyhow = "1.0.93"
cbindgen = { version = "0.29.0", default-features = false }
