[package]
name = "empath-delivery"
version = "0.0.1"
edition = "2024"
authors = ["Pyxxil"]
description = "Delivery processor for empath MTA"
documentation = "https://docs.rs/empath"
repository = "https://github.com/Pyxxilated-Studios/empath"
homepage = "https://github.com/Pyxxilated-Studios/empath"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "email", "network-programming"]
keywords = ["email"]

[lib]
name = "empath_delivery"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1"
empath-common = { path = "../empath-common", version = "*" }
empath-ffi = { path = "../empath-ffi", version = "*" }
empath-smtp = { path = "../empath-smtp", version = "*" }
empath-spool = { path = "../empath-spool", version = "*" }
empath-tracing = { path = "../empath-tracing", version = "*" }
hickory-resolver = "0.24"
lru = "0.12"
mailparse = "0.16"
serde = { version = "1", features = ["derive", "rc"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync", "fs", "time"] }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
ron = "0.8"
