[package]
name = "empath-delivery"
version = "0.0.1"
edition = "2024"
authors = ["Pyxxil"]
description = "Delivery processor for empath MTA"
documentation = "https://docs.rs/empath"
repository = "https://github.com/Pyxxilated-Studios/empath"
homepage = "https://github.com/Pyxxilated-Studios/empath"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "email", "network-programming"]
keywords = ["email"]

[lints]
workspace = true

[lib]
name = "empath_delivery"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = "0.8"
bincode = { version = "2", features = ["serde"] }
chrono = "0.4"
dashmap = "6"
empath-common = { path = "../empath-common", version = "*" }
empath-ffi = { path = "../empath-ffi", version = "*" }
empath-metrics = { path = "../empath-metrics", version = "*" }
empath-smtp = { path = "../empath-smtp", version = "*" }
empath-spool = { path = "../empath-spool", version = "*" }
empath-tracing = { path = "../empath-tracing", version = "*" }
hickory-resolver = "0.25"
mailparse = "0.16"
num_cpus = "1"
parking_lot = "0.12"
rand = "0.9"
serde = { version = "1", features = ["derive", "rc"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync", "fs", "time", "rt"] }
tracing = { version = "0.1", default-features = false }
ulid = "1"

[dev-dependencies]
mailparse = "0.16"
ron = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ulid = "1"
