[package]
name = "empath-health"
version = "0.1.0"
edition = "2024"
authors = ["Pyxxil <pyxxil@pyxxil.tech>"]

[lints]
workspace = true

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout"] }

# Async runtime
tokio = { version = "1", features = ["net", "sync", "time", "macros", "rt"] }

# Error handling
thiserror = "2"

# Empath crates
empath-common = { path = "../empath-common" }

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hyper = "1"
