[package]
name = "empath-metrics"
version = "0.0.1"
edition = "2024"
authors = ["Pyxxil"]
description = "OpenTelemetry metrics and tracing for empath MTA"
documentation = "https://docs.rs/empath"
repository = "https://github.com/Pyxxilated-Studios/empath"
homepage = "https://github.com/Pyxxilated-Studios/empath"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "email", "network-programming"]
keywords = ["email", "metrics", "observability", "opentelemetry"]

[lints]
workspace = true

[lib]
name = "empath_metrics"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "http-proto"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync", "macros", "rt-multi-thread"] }
tracing = { version = "0.1", default-features = false }
