[package]
name = "empath-server"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

build = "../build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
libc.workspace = true
empath-common.workspace = true
empath-smtp-proto.workspace = true
futures-util = "0.3"
mailparse.workspace = true
rustls-pemfile = "1.0"
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio.workspace = true
tokio-rustls = "0.24"
typetag.workspace = true

[build-dependencies]
cbindgen.workspace = true
