[package]
name = "empath-smtp-proto"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
empath-common = { path = "../empath-common" }
mailparse = "0.14"
serde.workspace = true

[build-dependencies]
cbindgen.workspace = true
