[package]
name = "empath-smtp"
version = "0.0.2"
edition = "2024"
authors = ["Pyxxil"]
description = "An MTA written in Rust"
documentation = "https://docs.rs/empath"
repository = "https://github.com/Pyxxilated-Studios/empath"
homepage = "https://github.com/Pyxxilated-Studios/empath"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "email", "network-programming"]
keywords = ["email"]

[lib]
name = "empath_smtp"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.93"
empath-common = { path = "../empath-common", version = "*" }
empath-ffi = { path = "../empath-ffi", version = "*" }
empath-tracing = { path = "../empath-tracing", version = "*" }
futures-util = "0.3"
mailparse = "0.16"
rustls-pemfile = "2.2"
serde = { version = "1", features = ["derive", "rc"] }
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "net",
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-rustls = "0.26"
tracing-attributes = "=0.1.28"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "std",
] }
