[package]
name = "empath-smtp"
version = "0.0.2"
edition = "2024"
authors = ["Pyxxil"]
description = "An MTA written in Rust"
documentation = "https://docs.rs/empath"
repository = "https://github.com/Pyxxilated-Studios/empath"
homepage = "https://github.com/Pyxxilated-Studios/empath"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "email", "network-programming"]
keywords = ["email"]

[lints]
workspace = true

[lib]
name = "empath_smtp"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
arrayvec = "0.7"
empath-common = { path = "../empath-common", version = "*" }
empath-ffi = { path = "../empath-ffi", version = "*" }
empath-spool = { path = "../empath-spool", version = "*" }
empath-tracing = { path = "../empath-tracing", version = "*" }
futures-util = "0.3"
mailparse = "0.16"
phf = { version = "0.13", features = ["macros"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
serde = { version = "1", features = ["derive", "rc"] }
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "net",
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-rustls = "0.26"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "std",
] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.5"

[[bench]]
name = "smtp_benchmarks"
harness = false
