[package]
name = "empath-spool"
version = "0.0.1"
edition = "2024"
authors = ["Pyxxil"]
description = "An MTA written in Rust"
documentation = "https://docs.rs/empath"
repository = "https://github.com/Pyxxilated-Studios/empath"
homepage = "https://github.com/Pyxxilated-Studios/empath"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "email", "network-programming"]
keywords = ["email"]

[lib]
name = "empath_spool"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.93"
empath-common = { path = "../empath-common", version = "*" }
notify = "8"
serde = { version = "1", features = ["derive", "rc"] }
tokio = { version = "1", default-features = false, features = ["sync"] }
