[package]
name = "empath-spool"
version = "0.0.1"
edition = "2024"
authors = ["Pyxxil"]
description = "An MTA written in Rust"
documentation = "https://docs.rs/empath"
repository = "https://github.com/Pyxxilated-Studios/empath"
homepage = "https://github.com/Pyxxilated-Studios/empath"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "email", "network-programming"]
keywords = ["email"]

[lints]
workspace = true

[lib]
name = "empath_spool"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1.0.93"
async-trait = "0.1"
bincode = { version = "2", features = ["serde"] }
dashmap = "6.1"
empath-common = { path = "../empath-common", version = "*" }
empath-tracing = { path = "../empath-tracing", version = "*" }
notify = "8"
serde = { version = "1", features = ["derive", "rc"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync", "fs", "time"] }
tracing = { version = "0.1", default-features = false }
ulid = "1.1"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
mailparse = "0.16"
ron = "0.12"
tokio = { version = "1", features = ["rt", "macros"] }

[[bench]]
name = "spool_benchmarks"
harness = false
