[package]
name = "empath"
version = "0.0.2"
edition = "2024"
authors = ["Pyxxil"]
description = "An MTA written in Rust"
documentation = "https://docs.rs/empath"
repository = "https://github.com/Pyxxilated-Studios/empath"
homepage = "https://github.com/Pyxxilated-Studios/empath"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "email", "network-programming"]
keywords = ["email"]
build = "build.rs"

[lib]
name = "empath"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "empath"
path = "bin/empath.rs"

[[bin]]
name = "empathctl"
path = "bin/empathctl.rs"

[dependencies]
anyhow = "1.0.93"
bincode = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
empath-common = { path = "../empath-common", version = "*" }
empath-delivery = { path = "../empath-delivery", version = "*" }
empath-ffi = { path = "../empath-ffi", version = "*" }
empath-smtp = { path = "../empath-smtp", version = "*" }
empath-spool = { path = "../empath-spool", version = "*" }
empath-tracing = { path = "../empath-tracing", version = "*" }
futures-util = "0.3"
libc = "0.2"
mailparse = "0.16"
ron = "0.8"
rustls-pemfile = "2.2"
serde = { version = "1", features = ["derive", "rc"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = [
    "fs",
    "io-util",
    "net",
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
anyhow = "1.0.93"
cbindgen = { version = "0.29.0", default-features = false }
