[package]
name = "entropy"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "bin/main.rs"

[dependencies]
chrono = "0.4"
colored = "2"
fern = "0.6"
log = "0.4"
mailparse = "0.14"
rustls = "0.21"
rustls-pemfile = "1.0"
smol = "1.2"
smol-timeout = "0.6"
trust-dns-resolver = "0.22"
libloading = "0.7"
