[package]
name = "empath-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
empath-common = { path = "../empath-common", version = "*" }

[[bin]]
name = "message"
path = "fuzz_targets/message.rs"
test = false
doc = false
bench = false
